--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ cache:
   apt: true
   directories:
     - /home/travis/.hunter
+    - /home/travis/opt/gcc-install
 
 matrix:
   include:
@@ -39,11 +40,14 @@ matrix:
 
 
 script:
+  - ${TRAVIS_BUILD_DIR}/tools/ci/install-gcc.sh
   - export PATH=/usr/lib/llvm-${CLANG_VERS}/bin/:${PATH}
   - export ASAN_OPTIONS=symbolize=1
   - export LSAN_OPTIONS=verbosity=1:log_threads=1
   - |
-    cmake . -GNinja \
+    mkdir build
+    cd build
+    cmake .. -GNinja \
       -DCMAKE_CXX_COMPILER="${CXXCOMPILER}" \
       -DCMAKE_C_COMPILER="${CCCOMPILER}" \
       -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
