--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ matrix:
 
 
 script:
-  - ${TRAVIS_BUILD_DIR}/tools/ci/install-gcc.sh
+  - travis_wait 30 ${TRAVIS_BUILD_DIR}/tools/ci/install-gcc.sh
   - export PATH=/usr/lib/llvm-${CLANG_VERS}/bin/:${PATH}
   - export ASAN_OPTIONS=symbolize=1
   - export LSAN_OPTIONS=verbosity=1:log_threads=1
