--- a/examples/ant/tests/CMakeLists.txt
+++ b/examples/ant/tests/CMakeLists.txt
@@ -10,6 +10,6 @@ set_target_properties(artificial_ant_tests PROPERTIES
             CXX_EXTENSIONS OFF
 )
 target_compile_options(artificial_ant_tests PRIVATE ${warning_flags})
-target_link_libraries(artificial_ant_tests PUBLIC Catch2::Catch Boost::boost)
+target_link_libraries(artificial_ant_tests PUBLIC Gpm Catch2::Catch Boost::boost)
 
 add_test(NAME artificial_ant_tests COMMAND artificial_ant_tests)
