--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ cache:
   apt: true
   directories:
     - /home/travis/.hunter
-    - /home/travis/opt/gcc-install
 
 matrix:
   include:
@@ -27,9 +26,9 @@ matrix:
             - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7 main'
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
           packages: [ "clang-7", "llvm-7-dev", "g++-8", "ninja-build", "texinfo"]
-    - env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=g++-8 CCOMPILER=gcc-8
+    - env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=/home/travis/opt/gcc-install/g++ CCOMPILER=/home/travis/opt/gcc-install/gcc
       addons: *default_addons
-    - env: CMAKE_BUILD_TYPE=Release CXXCOMPILER=g++-8 CCOMPILER=gcc-8
+    - env: CMAKE_BUILD_TYPE=Release CXXCOMPILER=/home/travis/opt/gcc-install/g++ CCOMPILER=/home/travis/opt/gcc-install/gcc
       addons: *default_addons
       #- env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=g++-8 CMAKE_CXX_FLAGS="-fsanitize=address -fno-omit-frame-pointer" CMAKE_EXE_LINKER_FLAGS="-fsanitize=address -fuse-ld=gold" CCOMPILER=gcc-8
       #  addons: *default_addons
