--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ matrix:
             - ubuntu-toolchain-r-test
             - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7 main'
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
-          packages: [ "clang-7", "llvm-7-dev", "g++-8", "ninja-build", "texinfo"]
+          packages: [ "clang-7", "llvm-7-dev", "g++-8", "ninja-build", "xz-utils"]
     - env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=/home/travis/opt/gcc-install/bin/g++ CCOMPILER=/home/travis/opt/gcc-install/bin/gcc
       addons: *default_addons
     - env: CMAKE_BUILD_TYPE=Release CXXCOMPILER=/home/travis/opt/gcc-install/bin/g++ CCOMPILER=/home/travis/opt/gcc-install/bin/gcc
