using gcc 8.2 build from source, since gcc 8.0 has issues with dyno

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,8 @@ matrix:
 
 
 script:
-  - wget -qO- "https://github.com/gchoinka/gpm/releases/download/v0.2.0/home_travis_opt_gcc-install.tar.xz" | tar xJ -C /home/travis/opt/
+  - wget "https://github.com/gchoinka/gpm/releases/download/v0.2.0/home_travis_opt_gcc-install.tar.xz" -O /home/travis/opt/gcc-install.tar.xz
+  - tar xf /home/travis/opt/gcc-install.tar.xz -C /home/travis/opt/
   - export PATH=/usr/lib/llvm-${CLANG_VERS}/bin/:${PATH}
   - export ASAN_OPTIONS=symbolize=1
   - export LSAN_OPTIONS=verbosity=1:log_threads=1
