--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ matrix:
             - ubuntu-toolchain-r-test
             - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7 main'
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
-          packages: [ "clang-7", "llvm-7-dev", "g++-8", "ninja-build", "xz-utils"]
-    - env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=/home/travis/opt/gcc-install/bin/g++ CCOMPILER=/home/travis/opt/gcc-install/bin/gcc
+          packages: [ "clang-7", "llvm-7-dev", "g++-7", "ninja-build", "xz-utils"]
+    - env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=g++-7.0 CCOMPILER=gcc-7.0
       addons: *default_addons
-    - env: CMAKE_BUILD_TYPE=Release CXXCOMPILER=/home/travis/opt/gcc-install/bin/g++ CCOMPILER=/home/travis/opt/gcc-install/bin/gcc
+    - env: CMAKE_BUILD_TYPE=Release CXXCOMPILER=g++-7.0 CCOMPILER=gcc-7.0
       addons: *default_addons
       #- env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=g++-8 CMAKE_CXX_FLAGS="-fsanitize=address -fno-omit-frame-pointer" CMAKE_EXE_LINKER_FLAGS="-fsanitize=address -fuse-ld=gold" CCOMPILER=gcc-8
       #  addons: *default_addons
@@ -39,8 +39,8 @@ matrix:
 
 
 script:
-  - mkdir /home/travis/opt/
-  - wget -qO- "https://github.com/gchoinka/gpm/releases/download/v0.2.0/home_travis_opt_gcc-install.tar.xz" | tar xJ -C /home/travis/opt/
+        #  - mkdir /home/travis/opt/
+        #  - wget -qO- "https://github.com/gchoinka/gpm/releases/download/v0.2.0/home_travis_opt_gcc-install.tar.xz" | tar xJ -C /home/travis/opt/
   - export PATH=/usr/lib/llvm-${CLANG_VERS}/bin/:${PATH}
   - export ASAN_OPTIONS=symbolize=1
   - export LSAN_OPTIONS=verbosity=1:log_threads=1
