improved bechmark results

--- a/examples/ant/CMakeLists.txt
+++ b/examples/ant/CMakeLists.txt
@@ -69,6 +69,7 @@ foreach(bmName variantDynamic variantCTStatic oopTreeDynamic oppTreeCTStatic unw
       COMMAND ${FORMAT_STEP}
       COMMAND "${CMAKE_COMMAND}" -E touch_nocreate "${CMAKE_CURRENT_SOURCE_DIR}/tree_benchmark_main.cpp"
       COMMAND /usr/bin/time -v -o "${CMAKE_CURRENT_BINARY_DIR}/buildtime_${bmName}.txt" "${CMAKE_COMMAND}" --build "${CMAKE_BINARY_DIR}" --target tree_benchmark
+      COMMAND stat --printf="%s" "$<TARGET_FILE:tree_benchmark>" > "${CMAKE_CURRENT_BINARY_DIR}/bin_size_${bmName}.txt"
       DEPENDS generate_tree_for_benchmark
     )
     add_dependencies(${last_target} timeing_build_tree_benchmark_${bmName})
@@ -79,7 +80,7 @@ endforeach()
 
 add_custom_target(make_tree_benchmark 
     COMMAND "${CMAKE_COMMAND}" -E remove "${GeneratedBechmarksIncludesDir}/ant_simulation_benchmark_generated_functions.cpp"
-    COMMAND "$<TARGET_FILE:generate_tree_for_benchmark>" --benchmark all --antrpndef "${CMAKE_CURRENT_SOURCE_DIR}/data/randomAnt.txt" --outfile "${GeneratedBechmarksIncludesDir}/ant_simulation_benchmark_generated_functions.cpp"
+    COMMAND "$<TARGET_FILE:generate_tree_for_benchmark>" --benchmark all --antrpndef "${CMAKE_CURRENT_SOURCE_DIR}/data/optAnt.txt" --outfile "${GeneratedBechmarksIncludesDir}/ant_simulation_benchmark_generated_functions.cpp"
     COMMAND ${FORMAT_STEP}
     COMMAND "${CMAKE_COMMAND}" -E touch_nocreate "${CMAKE_CURRENT_SOURCE_DIR}/tree_benchmark_main.cpp"
     COMMAND /usr/bin/time -v -o "${CMAKE_CURRENT_BINARY_DIR}/buildtime.txt" "${CMAKE_COMMAND}" --build "${CMAKE_BINARY_DIR}" --target tree_benchmark
@@ -93,7 +94,7 @@ add_custom_target(make_tree_benchmark
 
 
 add_custom_target(run_tree_benchmark 
-    COMMAND "$<TARGET_FILE:tree_benchmark>" --benchmark_out_format=json --benchmark_out="${CMAKE_CURRENT_BINARY_DIR}/tree_benchmark.json" -b "${CMAKE_CURRENT_SOURCE_DIR}/data/santa_fe_board.txt"
+    COMMAND "$<TARGET_FILE:tree_benchmark>" --benchmark_repetitions=10 --benchmark_out_format=json --benchmark_out="${CMAKE_CURRENT_BINARY_DIR}/tree_benchmark.json" -b "${CMAKE_CURRENT_SOURCE_DIR}/data/santa_fe_board.txt"
     DEPENDS make_tree_benchmark
 )
 
