--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ script:
   - export ASAN_OPTIONS=symbolize=1
   - export LSAN_OPTIONS=verbosity=1:log_threads=1
   - wget -qO- "https://cmake.org/files/v3.12/cmake-3.12.3-Linux-x86_64.tar.gz" | tar xvz -C /home/travis/opt/
+  - export CMAKE_BIN=/home/travis/opt/cmake-*/bin/cmake
   - |
     mkdir build
     cd build
