--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,6 @@ script:
       -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
       -DCMAKE_CXX_FLAGS="${CMAKE_CXX_FLAGS}" \
       -DCMAKE_EXE_LINKER_FLAGS="${CMAKE_EXE_LINKER_FLAGS}" 
-  - cmake --build . -- -j2 
+  - ${CMAKE_BIN} --build . -- -j2 
   - ctest --output-on-failure -VV        
-  - cmake --build . --target run_tree_benchmark
+  - ${CMAKE_BIN} --build . --target run_tree_benchmark
