--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,13 @@ matrix:
             - ubuntu-toolchain-r-test
             - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7 main'
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
-          packages: [ "clang-7", "llvm-7-dev", "g++-7", "ninja-build", "xz-utils", "gdb"]
+          packages: [ "clang-7", "llvm-7-dev", "g++-7", "g++-8", "ninja-build", "xz-utils", "gdb"]
     - env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=g++-7 CCOMPILER=gcc-7
       addons: *default_addons
     - env: CMAKE_BUILD_TYPE=Release CXXCOMPILER=g++-7 CCOMPILER=gcc-7
       addons: *default_addons
-      #- env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=g++-8 CMAKE_CXX_FLAGS="-fsanitize=address -fno-omit-frame-pointer" CMAKE_EXE_LINKER_FLAGS="-fsanitize=address -fuse-ld=gold" CCOMPILER=gcc-8
-      #  addons: *default_addons
+    - env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=g++-8 CMAKE_CXX_FLAGS="-fsanitize=address -fno-omit-frame-pointer" CMAKE_EXE_LINKER_FLAGS="-fsanitize=address -fuse-ld=gold" CCOMPILER=gcc-8
+      addons: *default_addons
     - env: CMAKE_BUILD_TYPE=Debug CXXCOMPILER=clang++-7 CMAKE_CXX_FLAGS="-fsanitize=undefined -fno-omit-frame-pointer" CMAKE_EXE_LINKER_FLAGS="-fsanitize=undefined" CLANG_VERS="7" CCOMPILER=clang-7 
       addons: *default_addons
     - env: CMAKE_BUILD_TYPE=Release CXXCOMPILER=clang++-7 CCOMPILER=clang-7 CLANG_VERS="7"
