--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 docs/* linguist-documentation
-*.js linguist-vendored=false
-*.html linguist-vendored=false
+*.js linguist-vendored=true
+*.html linguist-vendored=true
