--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,8 @@ script:
   - export ASAN_OPTIONS=symbolize=1
   - export LSAN_OPTIONS=verbosity=1:log_threads=1
   - wget -qO- "https://cmake.org/files/v3.12/cmake-3.12.4-Linux-x86_64.tar.gz" | tar xz -C /home/travis/opt/ &> /dev/null
-  - export CMAKE_BIN=/home/travis/opt/cmake-*/bin/cmake
-  - export CTEST_BIN=/home/travis/opt/cmake-*/bin/ctest
+  - export CMAKE_BIN=$(echo /home/travis/opt/cmake-*/bin/cmake)
+  - export CTEST_BIN=$(echo /home/travis/opt/cmake-*/bin/ctest)
   - echo "cmake bin:"${CMAKE_BIN}
   - |
     mkdir build
