--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,10 @@ script:
   - export PATH=/usr/lib/llvm-${CLANG_VERS}/bin/:${PATH}
   - export ASAN_OPTIONS=symbolize=1
   - export LSAN_OPTIONS=verbosity=1:log_threads=1
+  - rm -rf /home/travis/opt/cmake-* 2> /dev/null || true
   - wget -qO- "https://cmake.org/files/v3.12/cmake-3.12.4-Linux-x86_64.tar.gz" | tar xz -C /home/travis/opt/ &> /dev/null
   - export CMAKE_BIN=$(echo /home/travis/opt/cmake-*/bin/cmake)
   - export CTEST_BIN=$(echo /home/travis/opt/cmake-*/bin/ctest)
-  - echo "cmake bin:"${CMAKE_BIN}
   - |
     mkdir build
     cd build
