--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ init:
   - msbuild /version
 
 before_build:
-  - cmake . -G "%GENERATOR%" -DCMAKE_CXX_COMPILER=clang-cl -DCMAKE_CXX_FLAGS="%FLAGS%" -DCMAKE_IGNORE_PATH="C:/Program Files/Git/usr/bin"
+  - cmake . -G "%GENERATOR%" -T"LLVM-vs2017" -DCMAKE_CXX_COMPILER=clang-cl -DCMAKE_CXX_FLAGS="%FLAGS%" -DCMAKE_IGNORE_PATH="C:/Program Files/Git/usr/bin"
 
 build_script:
   - cmake --build .
